k8s-manifests/service.yml
apiVersion: v1
# Indicates this as a service
kind: Service
metadata:
 # Service name
 name: fastapi-service
spec:
 selector:
   # Selector for Pods
   app: fastapi
 ports:
   # Port Map
 - port: 8000
   targetPort: 8000
   protocol: TCP
 type: ClusterIP
